Add hwameictl (#1065)
* add hwameictl


* add hwameictl


* add hwameictl


* add hwameictl


* add hwameictl


* add hwameictl


* add hwameictl


* add hwameictl


* add hwameictl, fix the hardcode


---------
