# pkg/apiserver/docs/swagger.json
@@ -1371,80 +1371,6 @@
                 }
             }
         },
-        "/cluster/volumes/{volumeName}/expand": {
-            "get": {
-                "description": "get GetVolumeExpandOperation",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Volume"
-                ],
-                "summary": "摘要 获取指定数据卷扩容操作",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "volumeName",
-                        "name": "volumeName",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.VolumeExpandOperation"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/api.RspFailBody"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "post VolumeExpandOperation",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Volume"
-                ],
-                "summary": "摘要 指定数据卷扩容",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "volumeName",
-                        "name": "volumeName",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.VolumeConvertOperation"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/api.RspFailBody"
-                        }
-                    }
-                }
-            }
-        },
         "/cluster/volumes/{volumeName}/migrate": {
             "get": {
                 "description": "get GetVolumeMigrateOperation 状态枚举 （Submitted、AddReplica、SyncReplica、PruneReplica、InProgress、Completed、ToBeAborted、Cancelled、Aborted、Failed）",
@@ -1836,6 +1762,9 @@
                     "items": {
                         "$ref": "#/definitions/api.ModuleState"
                     }
+                },
+                "phase": {
+                    "type": "string"
                 }
             }
         },
@@ -3582,7 +3511,7 @@
                     "type": "string"
                 },
                 "owner": {
-                    "description": "Owner represents which system owns this claim(e.g. local-storage, local-disk-manager)",
+                    "description": "Owner represents which system owns this claim(e.g. local-storage, local-disk-manager)\n+kubebuilder:validation:Required",
                     "type": "string"
                 }
             }
@@ -3700,6 +3629,13 @@
                         }
                     ]
                 },
+                "devLinks": {
+                    "description": "DevLinks are symbol links for this device",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "devicePath": {
                     "description": "DevicePath is the disk path in the OS",
                     "type": "string"
@@ -3715,6 +3651,14 @@
                 "isRaid": {
                     "description": "HasRAID identifies if the disk is a raid disk or not",
                     "type": "boolean"
+                },
+                "major": {
+                    "description": "Major represents drive used by the device\n+optional",
+                    "type": "string"
+                },
+                "minor": {
+                    "description": "Minor is used to distinguish different devices\n+optional",
+                    "type": "string"
                 },
                 "nodeName": {
                     "description": "NodeName represents the node where the disk is attached\n+kubebuilder:validation:Required",
@@ -3734,6 +3678,14 @@
                 "partitioned": {
                     "description": "HasPartition represents if the disk has partitions or not",
                     "type": "boolean"
+                },
+                "preDevicePath": {
+                    "description": "PreDevicePath represents the last device path in the OS",
+                    "type": "string"
+                },
+                "preNodeName": {
+                    "description": "PreNodeName represents the node where the disk was attached",
+                    "type": "string"
                 },
                 "raidInfo": {
                     "description": "RAIDInfo contains RAID information\n+optional",
@@ -4391,11 +4343,6 @@
         "v1alpha1.State": {
             "type": "string",
             "enum": [
-                "",
-                "ToBeMounted",
-                "ToBeUnMount",
-                "Mounted",
-                "NotReady",
                 "Ready",
                 "Maintain",
                 "Offline",
@@ -4429,14 +4376,14 @@
                 "Failed",
                 "Available",
                 "InUse",
-                "Offline"
+                "Offline",
+                "",
+                "ToBeMounted",
+                "ToBeUnMount",
+                "Mounted",
+                "NotReady"
             ],
             "x-enum-varnames": [
-                "MountPointStateEmpty",
-                "MountPointToBeMounted",
-                "MountPointToBeUnMount",
-                "MountPointMounted",
-                "MountPointNotReady",
                 "NodeStateReady",
                 "NodeStateMaintain",
                 "NodeStateOffline",
@@ -4470,7 +4417,12 @@
                 "OperationStateFailed",
                 "DiskStateAvailable",
                 "DiskStateInUse",
-                "DiskStateOffline"
+                "DiskStateOffline",
+                "MountPointStateEmpty",
+                "MountPointToBeMounted",
+                "MountPointToBeUnMount",
+                "MountPointMounted",
+                "MountPointNotReady"
             ]
         },
         "v1alpha1.StorageNodeCondition": {
